Migration to use mobx-angular version for Angular 9

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "mobx": "^4.15.1",
-    "mobx-angular": "3.0.3"
+    "mobx-angular": "git+ssh://git@github.com/martinpagesaal/mobx-angular.git#angular-9-dist"
   },
   "devDependencies": {
     "@angular-devkit/core": "^8.1.0",
